--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <link rel="stylesheet/less" type="text/css" href="/site_media/static/less/bootstrap.less">
         
-        <script src="/site_media/static/js/less-1.1.5.min.js.js" type="text/javascript"></script>
+        <script src="/site_media/static/js/less-1.1.5.min.js" type="text/javascript"></script>
         <script src="/site_media/static/js/jquery-1.7.min.js"></script>
         <script src="/site_media/static/js/jquery.form.js"></script>
         <script src="/site_media/static/js/bootstrap-alerts.js"></script>
