--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
-        <link rel="shortcut icon" href="/site_media/static/img/favicon.ico" />
 
-        <link rel="stylesheet/less" type="text/css" href="/site_media/static/less/bootstrap.less">
+        <link rel="stylesheet/less" type="text/css" href="site_media/static/less/bootstrap.less">
         
-        <script src="/site_media/static/js/less-1.1.5.min.js" type="text/javascript"></script>
-        <script src="/site_media/static/js/jquery-1.7.min.js"></script>
-        <script src="/site_media/static/js/jquery.form.js"></script>
-        <script src="/site_media/static/js/bootstrap-alerts.js"></script>
-        <script src="/site_media/static/js/bootstrap-twipsy.js"></script>
-        <script src="/site_media/static/js/bootstrap-popover.js"></script>
-        <script src="/site_media/static/js/bootstrap-dropdown.js"></script>
-        <script src="/site_media/static/js/bootstrap-tabs.js"></script>
-        <script src="/site_media/static/js/bootstrap-scrollspy.js"></script>
-        <script src="/site_media/static/js/bootstrap-buttons.js"></script>
+        <script src="site_media/static/js/less-1.1.5.min.js" type="text/javascript"></script>
+        <script src="site_media/static/js/jquery-1.7.min.js"></script>
+        <script src="site_media/static/js/bootstrap-alerts.js"></script>
+        <script src="site_media/static/js/bootstrap-twipsy.js"></script>
+        <script src="site_media/static/js/bootstrap-popover.js"></script>
+        <script src="site_media/static/js/bootstrap-dropdown.js"></script>
+        <script src="site_media/static/js/bootstrap-tabs.js"></script>
+        <script src="site_media/static/js/bootstrap-scrollspy.js"></script>
+        <script src="site_media/static/js/bootstrap-buttons.js"></script>
         
     <style>
 		.jumbotron h1 {
@@ -44,7 +42,7 @@
     <div class="topbar">
         <div class="fill">
             <div class="container">
-                <h3><a href="/">symposion</a></h3>
+                <h3><a href="/symposion/">symposion</a></h3>
             </div>
         </div>
     </div>
