--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <link rel="stylesheet/less" type="text/css" href="site_media/static/less/bootstrap.less">
         
         <script src="site_media/static/js/less-1.1.5.min.js" type="text/javascript"></script>
-        <script src="site_media/static/js/jquery-1.7.min.js"></script>
-        <script src="site_media/static/js/bootstrap-alerts.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script src="site_media/static/js/bootstrap-alert.js"></script>
         <script src="site_media/static/js/bootstrap-twipsy.js"></script>
         <script src="site_media/static/js/bootstrap-popover.js"></script>
         <script src="site_media/static/js/bootstrap-dropdown.js"></script>
-        <script src="site_media/static/js/bootstrap-tabs.js"></script>
+        <script src="site_media/static/js/bootstrap-tab.js"></script>
         <script src="site_media/static/js/bootstrap-scrollspy.js"></script>
-        <script src="site_media/static/js/bootstrap-buttons.js"></script>
+        <script src="site_media/static/js/bootstrap-button.js"></script>
         
     <style>
 		.jumbotron h1 {
