--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <div class="container">                        
 				<div class="legal">
 				    <footer class="footer">
-				    	A Pinax project.
+				    	A Pinax project sponsored by <a href="http://eldarion.com/">Eldarion</a> and
+						the <a href="http://www.python.org/psf/">Python Software Foundation</a>.
 				    </footer>
 				</div>
             </div>
