--- a/index.html
+++ b/index.html
@@ -21,16 +21,51 @@
         <script src="site_media/static/js/bootstrap-button.js"></script>
         
     <style>
+    	/* Body and structure
+		-------------------------------------------------- */
+		body {
+		  position: relative;
+		  padding-top: 90px;
+		  background-color: #fff;
+		  background-image: url(../img/grid-18px-masked.png);
+		  background-repeat: repeat-x;
+		}
+
+
+		/* Tweak navbar brand link to be super sleek
+		-------------------------------------------------- */
+		body > .navbar-fixed .brand {
+		  padding-right: 0;
+		  padding-left: 0;
+		  margin-left: 20px;
+		  float: right;
+		  font-weight: bold;
+		  color: #000;
+		  text-shadow: 0 1px 0 rgba(255,255,255,.1), 0 0 30px rgba(255,255,255,.125);
+		}
+		body > .navbar-fixed .brand:hover {
+		  text-decoration: none;
+		}
+
+    	/* Jumbotrons
+		-------------------------------------------------- */
+		.jumbotron {
+		  position: relative;
+		  text-shadow: 0 1px 0 #fff;
+		}
 		.jumbotron h1 {
-		 font-size: 72px;
+		  margin-right: 40%;
+		  margin-bottom: 9px;
+		  font-size: 90px;
+		  letter-spacing: -1px;
+		  line-height: 1;
 		}
-		p.call, p.error {
-		 font-size: 15px;
-		 line-height: 15px;
-		 margin-bottom: 10px;
-		}
-		p.lead b {
-		 font-weight: 600;
+		.jumbotron p {
+		  margin-right: 32%;
+		  margin-bottom: 20px;
+		  font-size: 25px;
+		  font-weight: 300;
+		  line-height: 36px;
 		}
 	</style>
     
