remove text decoration

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 		  background-repeat: repeat-x;
 		}
 
+		body > .navbar-fixed .brand:hover {
+		  text-decoration: none;
+		}
+
     	/* Jumbotrons
 		-------------------------------------------------- */
 		.jumbotron {
