change front page copy

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	                <h1>symposion</h1>
 
 					<p class="lead">
-					    <b>Conference software</b> for the rest of us.
+					    A Django project for <b>conference websites</b>.
 					</p>
 	            </div>
 	        </header>
