removed bold in lead

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	                <h1>symposion</h1>
 
 					<p class="lead">
-					    A Django project for <b>conference websites</b>.
+					    A Django project for conference websites.
 					</p>
 	            </div>
 	        </header>
