added link back to github

--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
                     </div>
                 </header>
             </div>
+            
+            <p>
+                Source code available on <a href="https://github.com/pinax/symposion">GitHub</a>.
+                More coming soon.
+            </p>
+            
             <footer class="footer">
                 <p>
                     A Pinax project sponsored by <a href="http://eldarion.com/">Eldarion</a> and
