update hero specific styles

--- a/index.html
+++ b/index.html
@@ -15,30 +15,17 @@
             /* Body and structure
             -------------------------------------------------- */
             body {
-                position: relative;
                 padding-top: 90px;
-                background-color: #fff;
-                background-repeat: repeat-x;
             }
             
-            body > .navbar-fixed .brand:hover {
-                text-decoration: none;
-            }
-            
-            /* Jumbotrons
-            -------------------------------------------------- */
-            .jumbotron {
-                position: relative;
-                text-shadow: 0 1px 0 #fff;
-            }
-            .jumbotron h1 {
+            .hero-unit h1 {
                 margin-right: 40%;
                 margin-bottom: 9px;
                 font-size: 90px;
                 letter-spacing: -1px;
                 line-height: 1;
             }
-            .jumbotron p {
+            .hero-unit p {
                 margin-right: 32%;
                 margin-bottom: 20px;
                 font-size: 25px;
