adding footer styles

--- a/index.html
+++ b/index.html
@@ -32,6 +32,38 @@
                 font-weight: 300;
                 line-height: 36px;
             }
+            /* Footer
+            -------------------------------------------------- */
+            .footer {
+              margin-top: 45px;
+              padding: 35px 0 36px;
+              border-top: 1px solid #e5e5e5;
+            }
+            .footer p {
+              margin-bottom: 0;
+              color: #555;
+            }
+            .footer dl {
+              margin-bottom: 0;
+            }
+            .footer dl dt {
+              font-size: 11px;
+              color: #999;
+              text-transform: uppercase;
+            }
+            .footer dl dd + dt {
+              margin-top: 18px;
+            }
+            .footer dl dd {
+              margin-left: 0;
+              font-size: 12px;
+            }
+            .footer dl a {
+              color: #999;
+            }
+            .footer dl a:hover {
+              color: #555;
+            }
         </style>
     </head>
     <body class="home" id="">
